--- a/GAJaloyan/sample_report/ref.bib
+++ b/GAJaloyan/sample_report/ref.bib
@@ -142,3 +142,24 @@ language={English}
  number = "NASA/TM-2010-216862",
  address = "Langley Research Center, Hampton VA 23681-2199, USA"
 }
+
+@techreport{NM2011NASA,
+ author = {Anthony Narkawicz and C\'esar Mu{\~{n}}oz},
+ title = {State-Based Implicit Coordination and Applications},
+ institution =  "NASA",
+ month = "March",
+ year  = "2011",
+ type  = "Technical Publication",
+ number = "NASA/TP-2011-217067",
+ address = "Langley Research Center, Hampton VA 23681-2199, USA"
+}
+
+@inproceedings{MNC13GNC,
+        author = "C{\'{e}}sar Mu{\~{n}}oz and Anthony Narkawicz and James Chamberlain",
+        title = "A {TCAS-II} Resolution Advisory Detection Algorithm",
+        booktitle = "Proceedings of the AIAA Guidance Navigation, and Control Conference and Exhibit 2013", 
+        number = "AIAA-2013-4622",
+        address = "Boston, Massachusetts",
+        month = "August",
+        year = "2013"
+}
