--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -3,17 +3,32 @@
   \usepackage{tabularx}
   \usetheme{Frankfurt}
   \usepackage{listings}
+  \usepackage{mathpartir}
+  \usepackage{multicol}
+  \usepackage{graphicx}
   
   
   
   \title{DBpedia - A Crystallization Point for the Web of Data}
   \author{C. Bizer, J. Lehmann, G. Kobilarov, S. Auer, C. Becker, R. Cyganiak, S. Hellmann}
-  \date{May 24, 2009}
+  \date{August 24, 2015}
   
   \begin{document}
+  	\begin{frame}
+  		
+  		\begin{center}
+  			\includegraphics[height=2cm]{images/NIA-logo.jpg} \text{                     } \includegraphics[height=2cm]{images/NASA.png}
+  			\includegraphics[height=2cm]{images/ENS-logo.jpg}
+  		\end{center}
+  		\titlepage
+  	\end{frame}
   	
   	\begin{frame}
   		
+  		\begin{center}
+  			\includegraphics[height=2cm]{images/NIA-logo.jpg}
+  			\includegraphics[height=2cm]{images/ENS logo.jpg} \includegraphics[height=2cm]{images/NASA.png}
+  		\end{center}
   		\titlepage
   	\end{frame}
   	
@@ -30,11 +45,5 @@
   	\end{frame}
   	
   	
-  	
-  	
-  	\begin{frame}
-  		\frametitle{Fin}
-  		Des questions ?
-  	\end{frame}
   	
   \end{document}
