--- a/GAJaloyan/sample_report/ref.bib
+++ b/GAJaloyan/sample_report/ref.bib
@@ -1,3 +1,4 @@
+
 @incollection{Copilot01,
 year={2010},
 isbn={978-3-642-16611-2},
@@ -72,7 +73,7 @@ language={English}
   volume    = {9},
   number    = {4},
   year      = {2013},
- pages      = {235-255}
+ pages      = {235-255},
   note      = {Preprint available at \url{http://www.cs.indiana.edu/~lepike/pub_pages/isse.html}},
 }
 @MISC{Copilot05,
